test/sema/out_param/amp_op_invalid.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S<T> { x: T }

fn foo(x: number) {}

fn bar(x: &number) {}

fn main() {
  mut x = 1;

  // CHECK: [[# @LINE + 1 ]]:11: error: '&' can only be used to pass arguments to '&' parameters
  let y = &x;

  // CHECK: [[# @LINE + 1 ]]:9: error: '&' can only be used to pass arguments to '&' parameters
  S{ x: &x };

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '&mut number' with 'number'
  foo(&x);

  // CHECK: [[# @LINE + 1 ]]:8: error: cannot create reference to rvalues
  bar(&1);

  let z = 0;

  bar(&z);
}
// CHECK-NOT: {{.*error.*}}
